# MiniJavabCompiler

./: CMakeLists.txt  MiniJavabExtensions.md  README.md
docs/: SimpleTest.java  TypingRules.md  ir.md  metadata_example.ir
examples/: add.java
include/minijavab/: Casting.h  iterator_range.h
include/minijavab/cmdline/: options.h
include/minijavab/core/: Type.h
include/minijavab/core/ir/: AggregateConstant.h  BasicBlock.h  Constant.h  Function.h  GlobalVariable.h  IRBuilder.h  Immediate.h  Instruction.h  IntegerConstant.h  IntrinsicFunction.h  Module.h  Parameter.h  PointerConstant.h  PrinterImpl.h  StringConstant.h  StructConstant.h  Type.h  Value.h  ValuePrinter.h  VectorConstant.h
include/minijavab/core/ir/Instructions/: AND.h  Add.h  Alloc.h  Br.h  BrIf.h  Call.h  Cmp.h  Div.h  GetPtr.h  Load.h  Mul.h  OR.h  Opcodes.h  Ret.h  Store.h  Sub.h  XOR.h
include/minijavab/frontend/: ASTClassTable.h  Converter.h  ImmediateFolder.h  InstructionLowering.h  PrimitiveTypes.h  TypeChecker.h  frontend.h
include/minijavab/frontend/ast/: AssignmentStatementNode.h  BinaryExpNode.h  ClassDeclNode.h  ExpNode.h  IfStatementNode.h  IndexExpNode.h  IndexNode.h  LengthExpNode.h  LiteralExpNode.h  MethodCallExpNode.h  MethodCallStatementNode.h  MethodDeclNode.h  NestedExpNode.h  NestedStatementsNode.h  NewObjectNode.h  Node.h  ObjectExpNode.h  ObjectNode.h  PrintStatementNode.h  ProgramNode.h  ReturnStatementNode.h  StatementNode.h  Type.h  TypeNode.h  UnaryExpNode.h  VarDeclNode.h  WhileStatementNode.h  ast.h
include/minijavab/frontend/parser/: parserdriver.h
src/: CMakeLists.txt  parser.yy  scanner.ll
src/ast/: AssignmentStatementNode.h  BinaryExpNode.cpp  BinaryExpNode.h  CMakeLists.txt  ClassDeclNode.cpp  ClassDeclNode.h  ExpNode.h  IfStatementNode.cpp  IfStatementNode.h  IndexExpNode.h  IndexNode.h  LengthExpNode.h  LiteralExpNode.cpp  LiteralExpNode.h  MethodCallExpNode.cpp  MethodCallExpNode.h  MethodDeclNode.cpp  MethodDeclNode.h  NestedExpNode.h  NestedStatementsNode.h  NewObjectNode.h  Node.cpp  Node.h  ObjectExpNode.h  ObjectNode.h  PrintStatementNode.h  ProgramNode.h  ReturnStatementNode.h  StatementNode.h  TypeNode.cpp  TypeNode.h  UnaryExpNode.cpp  UnaryExpNode.h  VarDeclNode.cpp  VarDeclNode.h  WhileStatementNode.h  ast.h
src/cmdline/: options.cpp
src/compiler/: main.cpp
src/core/: CMakeLists.txt  GlobalVariable.cpp  Module.cpp  Type.cpp  Type.h
src/core/ir/: AggregateConstant.cpp  BasicBlock.cpp  Constant.cpp  Function.cpp  GlobalVariable.cpp  IRBuilder.cpp  Immediate.cpp  Instruction.cpp  IntegerConstant.cpp  IntrinsicFunction.cpp  Module.cpp  Parameter.cpp  PointerConstant.cpp  PrinterImpl.cpp  StringConstant.cpp  StructConstant.cpp  Type.cpp  ValuePrinter.cpp  VectorConstant.cpp
src/core/ir/Instructions/: AND.cpp  Add.cpp  Alloc.cpp  Br.cpp  BrIf.cpp  Call.cpp  Cmp.cpp  Div.cpp  GetPtr.cpp  Load.cpp  Mul.cpp  OR.cpp  Ret.cpp  Store.cpp  Sub.cpp  XOR.cpp
src/frontend/: ASTClassTable.cpp  ASTClassTable.h  CMakeLists.txt  Converter.cpp  Frontend.cpp  ImmediateFolder.cpp  InstructionLowering.cpp  TypeChecker.cpp  TypeChecker.h  frontend.h
src/frontend/ast/: AssignmentStatementNode.h  BinaryExpNode.cpp  BinaryExpNode.h  CMakeLists.txt  ClassDeclNode.cpp  ClassDeclNode.h  ExpNode.h  IfStatementNode.cpp  IfStatementNode.h  IndexExpNode.h  IndexNode.h  LengthExpNode.h  LiteralExpNode.cpp  LiteralExpNode.h  MethodCallExpNode.cpp  MethodCallExpNode.h  MethodDeclNode.cpp  MethodDeclNode.h  NestedExpNode.h  NestedStatementsNode.h  NewObjectNode.h  Node.h  ObjectExpNode.h  ObjectNode.h  PrintStatementNode.h  ProgramNode.h  ReturnStatementNode.h  StatementNode.h  Type.cpp  TypeNode.cpp  TypeNode.h  UnaryExpNode.cpp  UnaryExpNode.h  VarDeclNode.cpp  VarDeclNode.h  WhileStatementNode.h
src/frontend/parser/: CMakeLists.txt  parser.yy  parserdriver.h  scanner.cpp  scanner.h  tokenizer.ll
src/frontend/src/: driver.cpp
src/parser/: CMakeLists.txt  driver.h  main.cpp  parser.yy  parserdriver.h  scanner.cpp  scanner.h  scanner.ll  tokenizer.ll
src/tools/: CMakeLists.txt  dump-ast.cpp  typecheck.cpp
tests/: CMakeLists.txt
tests/harness/: CMakeLists.txt
tests/harness/src/: harness.cpp
tests/language/: CMakeLists.txt  common.cpp  common.h  hello_world.cpp  test_arrays.cpp  test_comments.cpp  test_expressions.cpp  test_hello_world.cpp  test_methods.cpp  test_objects.cpp  test_statements.cpp
tests/language/arrays/: 2DArray.java
tests/language/comments/: BrokenProgram.java  Program.java
tests/language/expressions/: ArrayUsage.java  SimpleArrayDeref.java
tests/language/expressions/errors/: BooleanAddition.java  DimensionMismatch.java  TypeMismatch.java
tests/language/objects/: ArgsOtherScope.java
tests/language/objects/errors/: DeclaringClassString.java  IntegerLength.java
tests/language/statements/: IfElse.java
tests/language/statements/errors/: DuplicateLocalVar.java  ElseOneBracket.java
tools/: dump-ast.cpp  typecheck.cpp
